--- a/css/style.css
+++ b/css/style.css
@@ -96,6 +96,19 @@
 .main .main_productos img {
   width: 300px;
 }
+@media screen and (max-width: 768px) {
+  .main .main_productos {
+    display: grid;
+    grid-template-columns: 1fr;
+    width: 100%;
+  }
+  .main .main_productos .prod {
+    width: 180px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
 
 .main_text {
   display: flex;
@@ -212,13 +225,6 @@ a {
   .main_text {
     display: flex;
     flex-direction: column;
-  }
-  .main_productos {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: auto;
-    gap: 10px;
-    width: 50%;
   }
   .footer {
     display: flex;
