--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -15,6 +15,17 @@
         }
         img{
             width: 300px;
+        }
+        @media screen and (max-width:768px){
+            display: grid;
+            grid-template-columns: 1fr;
+            width: 100%;
+            .prod{
+                width: 180px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
         }   
     }
 }
